--- a/Index.html
+++ b/Index.html
@@ -197,4 +197,15 @@ button:hover {
       alert('History feature coming soon!');
     }
   </script></body>
-</html>
+    </html>
+    </div>
+
+  <!-- Footer Author -->
+  <footer style="text-align:center; margin-top:20px; font-size:0.9em; color: gray;">
+    &copy; 2025 Issouf Aly Nasry
+  </footer>
+
+  <script>
+    // JavaScript code...
+  </script>
+</body>
